# imgponic

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  package-lock.json  package.json  tauri.conf.json  vite.config.ts  vitest.config.ts  vitest.node.config.ts
.cargo/: audit.toml  config.toml
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: ci.yml  codeql.yml  governance-gate.yml  links.yml  markdown.yml  policy.yml  release-drafter.yml  required-labels.yml  rust.yml  spec-notify.yml  spec-tasker.yml  test.yml  tests.yml
Day8/: INSTALL.md  README.md
Day8/.github/: PULL_REQUEST_TEMPLATE.md
Day8/workflow-cookbook/: BLUEPRINT.md  README.md  (+2 more)
docs/: IN-20250215-001.md  IN-20250310-001.md  INCIDENT_TEMPLATE.md  Imgponic_配色仕様_v1.0.md  gtk4_links.md
public/: index.html
scripts/: build.bat  check-ollama.bat  dev.bat  run-built.bat
src/: App.tsx  App.ui.test.tsx  Imgponic_次のステップ_設計仕様_v0.4-pre.md  Imgponic_配色仕様_v1.0.md  KeybindOverlay.tsx  PromptForge_src_v0.3.md  PromptForge_アーキテクチャ設計_v0.3.md  PromptForge_仕様書_v0.3_目次付き.md  PromptForge_拡張仕様書_v0.4.md  PromptForge_要件定義_v0.3.md  PromptForge_詳細設計_v0.3.md  app.css  main.rs  ollama_stream.rs  setup_check.rs  tests.rs  theme.tokens.test.ts  txt_excerpt.rs  useOllamaStream.ts  useSetupCheck.test.ts  useSetupCheck.ts  vite.config.test.ts  workspace_v2.rs
tests/: README.md  compose_prompt_snapshot.rs  plugin_registration.rs  project_file_io.rs  project_io.rs  prompt_files.rs  test_check_governance_gate.py  test_ci_logging.py  workspace_backup.rs
tools/: pkg-config-webkit.sh
(+47 files in other folders)
