[package]
name = "promptforge"
version = "0.3.0"
edition = "2021"

[dependencies]
tauri = { version = "1", features = ["api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
futures-util = "0.3"

[build-dependencies]
tauri-build = "1"

[dev-dependencies]
insta = "1"
tempfile = "3"
