[package]
name = "promptforge"
version = "0.3.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
futures-util = "0.3"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
insta = "1"
tempfile = "3"

[[test]]
name = "glib_stack"
path = "tests/security/glib_stack.rs"
